log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:07:04 PM UTC 2026: 
 graph.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:51: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair* pair = map_search(g -> adjacencyMap, label1);
      |                                                   ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c: At top level:
graph.c:67:5: error: expected identifier or ‘(’ before ‘return’
   67 |     return -1;
      |     ^~~~~~
graph.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
graph.c: In function ‘getWeight’:
graph.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
d37bbbc
Thu May 14 08:07:32 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c:67:5: error: expected identifier or ‘(’ before ‘return’
   67 |     return -1;
      |     ^~~~~~
graph.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
graph.c: In function ‘getWeight’:
graph.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
cb07fd5
Thu May 14 08:07:51 PM UTC 2026: 
 graph.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|6
========================================
15c8531
Thu May 14 08:08:31 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
60d902b
Thu May 14 08:10:43 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
4936991
Thu May 14 08:11:41 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
06b3404
Thu May 14 08:11:53 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
dd61345
Thu May 14 08:12:11 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
========================================
21a0adf
Thu May 14 08:13:53 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
79374ba
Thu May 14 08:15:46 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8e2e62f
Thu May 14 08:16:44 PM UTC 2026: 
 graph.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:55:9: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   55 |         return;
      |         ^~~~~~
graph.c:49:5: note: declared here
   49 | int getWeight(Graph* g, const char* label1, const char* label2) {
      |     ^~~~~~~~~
b2c13d2
Thu May 14 08:16:53 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
77613e9
Sat May 16 07:05:32 PM UTC 2026: 
 graph.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:30:40: error: ‘Gradh’ undeclared (first use in this function); did you mean ‘Graph’?
   30 |     Graph* g = (Graph *) malloc(sizeof(Gradh));
      |                                        ^~~~~
      |                                        Graph
graph.c:30:40: note: each undeclared identifier is reported only once for each function it appears in
graph.c:31:25: error: too few arguments to function ‘map_create’
   31 |     g -> adjacencyMap = map_create();
      |                         ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
13e86ed
Sat May 16 07:10:55 PM UTC 2026: 
 graph.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:36: error: ‘is_equal’ undeclared (first use in this function)
   33 |     g -> adjacencyMap = map_create(is_equal);
      |                                    ^~~~~~~~
graph.c:33:36: note: each undeclared identifier is reported only once for each function it appears in
4aefd93
Sat May 16 07:11:08 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
43e7283
Sat May 16 07:27:27 PM UTC 2026: 
 graph.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:44:23: error: invalid use of incomplete typedef ‘Map’
   44 |     g -> adjacencyMap -> key = copia;
      |                       ^~
graph.c:45:23: error: invalid use of incomplete typedef ‘Map’
   45 |     g -> adjacencyMap -> value = lista;
      |                       ^~
ad67482
Sat May 16 07:28:21 PM UTC 2026: 
 graph.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
80a155b
Sat May 16 07:29:32 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:42: error: expected ‘)’ before ‘label’
   40 |     if(map_search(g->adjacencyMap, (void* label))!= NULL) return;
      |                                    ~     ^~~~~~
      |                                          )
graph.c:40:49: error: expected expression before ‘)’ token
   40 |     if(map_search(g->adjacencyMap, (void* label))!= NULL) return;
      |                                                 ^
f766b12
Sat May 16 07:29:49 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af8863d
Sat May 16 07:56:49 PM UTC 2026: 
 graph.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:71:5: error: implicit declaration of function ‘list_pushback’; did you mean ‘list_pushBack’? [-Wimplicit-function-declaration]
   71 |     list_pushback(lista_edges, edge);
      |     ^~~~~~~~~~~~~
      |     list_pushBack
fe87b09
Sat May 16 07:57:01 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
85cf0bb
Sat May 16 08:03:09 PM UTC 2026: 
 graph.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getAdjacentLabels’:
graph.c:115:8: error: ‘edges’ undeclared (first use in this function)
  115 |     if(edges == NULL){
      |        ^~~~~
graph.c:115:8: note: each undeclared identifier is reported only once for each function it appears in
graph.c:119:37: error: ‘list_edges’ undeclared (first use in this function); did you mean ‘lista_edges’?
  119 |     Edge* edge = (Edge*) list_first(list_edges);
      |                                     ^~~~~~~~~~
      |                                     lista_edges
graph.c:114:11: error: unused variable ‘lista_edges’ [-Werror=unused-variable]
  114 |     List* lista_edges = getEdges(g, label);
      |           ^~~~~~~~~~~
cc1: all warnings being treated as errors
4807456
Sat May 16 08:03:35 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getAdjacentLabels’:
graph.c:115:8: error: ‘edges’ undeclared (first use in this function)
  115 |     if(edges == NULL){
      |        ^~~~~
graph.c:115:8: note: each undeclared identifier is reported only once for each function it appears in
7c63e4c
